<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFCApp</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    
    <string name="hello_world">Hello! Please tap the phone with the NFC Tag</string>
    <string name="server_unavailable">Server unavailable.</string>
    
    <string name="private_filename">NFCAppPrivateData</string>
    
    <string name="username_field">Enter Username</string>
    <string name="password_field">Enter Password</string>
    <string name="registration_button_field">Register</string>
    
    <string name="reservation_message">MESSAGEA</string>
    <string name="room_status_message">MESSAGEB</string>
    
    <string name="about_heading">About the App</string>
    <string name="group_members">Group members:</string>
    <string name="rohith">Rohith Balluru</string>
    <string name="abhishek">Abhishek Aggarwal</string>
    <string name="gurpreet">Gurpreet Matharu</string>
    
    <string name="title_activity_user_registration">User Registration</string>
    <string name="title_activity_send_data_to_server">Sending request to Server</string>
    <string name="title_activity_display_room_status">Room status</string>
    <string name="title_activity_about">About</string>

</resources>
