<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendDataToServerActivity" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:gravity="center" 
        android:text="@string/about_heading" 
        android:textSize="25sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:gravity="center" 
        android:text="@string/group_members" 
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" 
        android:text="@string/rohith" 
        android:textSize="15sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" 
        android:text="@string/abhishek" 
        android:textSize="15sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp" 
        android:text="@string/gurpreet" 
        android:textSize="15sp" />
    
</LinearLayout>