<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserRegistrationActivity" >

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/username_field" 
        android:layout_gravity="center"
        android:gravity="center"/>
    
    <EditText
        android:id="@+id/passwordField"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/password_field" 
        android:layout_gravity="center"
        android:gravity="center" />
    
    <Button
        android:id="@+id/registrationButton"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:text="@string/registration_button_field" 
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="registerUser" />

</LinearLayout>
